# Dashborad-Prodepa

./: app.py  main.py  prodepa.pae.csv  pyproject.toml  requirements.txt
assets/: custom_styles.css  prodepa.contratos.pae.ipynb
pages/: analises.py  home.py  login.py
